--- a/src/App.css
+++ b/src/App.css
@@ -630,6 +630,7 @@ hr {
 .email {
   color: #ffffff;
   margin-left: 5px;
+  margin-left: 44px;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   padding: 5px 0px;
